Fix 404 text alignment

--- a/lovet-chat/src/views/NotFound/NotFound.css
+++ b/lovet-chat/src/views/NotFound/NotFound.css
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    text-align: center;
     background-color: var(--primary-container);
 }
 
